--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -14,6 +14,7 @@ $dark:      #222;
 $light:     #333;
 $white:     #eee;
 $black:     #000;
+$brand-color: #8c4;
 
 /* Layout */
 $blocksize: 60px;
